New version for family of websites

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Previous head and header content remains the same -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Litchfield Capital Corporation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-    <!-- Previous styles remain the same -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1>Litchfield Capital Corporation</h1>
