Update index.html and style.css with clean, organized code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Previous head and header content remains the same -->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +7,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <h1>Litchfield Capital Corporation</h1>
@@ -25,7 +22,7 @@
     </nav>
 
     <main>
-        <section id="about" class="animate__animated animate__fadeIn">
+        <section id="about">
             <h2>About Us</h2>
             <p>
                 Litchfield Capital Corporation is committed to advancing research and innovation in diverse fields, from physics and machine learning to linguistics and information theory. Beyond our core R&D initiatives, we also operate a range of ventures that reflect our passion for technology and innovation.
@@ -43,7 +40,7 @@
             </ul>
         </section>
 
-        <section id="papers" class="animate__animated animate__fadeIn">
+        <section id="papers">
             <h2>Research Papers</h2>
             <p>
                 Explore our latest academic papers and publications, offering insights into cutting-edge research and theoretical breakthroughs.
@@ -51,13 +48,10 @@
             </p>
             <div id="papers-container">
                 <!-- Papers will be dynamically loaded here -->
-                <div class="paper-card">
-                    <div class="paper-title">Loading papers...</div>
-                </div>
             </div>
         </section>
 
-        <section id="experiments" class="animate__animated animate__fadeIn">
+        <section id="experiments">
             <h2>Experiments</h2>
             <p>
                 Discover our ongoing experiments and projects, where we turn bold ideas into reality.
@@ -75,7 +69,6 @@
         </div>
     </footer>
 
-    <!-- Add JavaScript file -->
-    <script src="/js/papers.js"></script>
+    <script src="js/papers.js"></script>
 </body>
 </html>
